--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "express-init-template",
-  "version": "1.5.0",
-  "description": "This is a basic Express application template designed to help you create APIs quickly. It includes essential configurations and setup for starting an Express server.",
+  "name": "apppost",
+  "version": "1.0.0",
+  "description": "api actividad 8 de posts",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [
-    "express",
-    "init",
-    "template"
-  ],
-  "author": "Mario Girón Martín",
-  "license": "MIT",
+    "author": "macarena leonato",
+  "license": "unir",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
