--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-    "author": "macarena leonato",
+  "author": "macarena leonato",
   "license": "unir",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
